--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,9 @@ h1, h2, h3, h4, h5, h6, figure {
   margin: 0;
   padding: 0;
   line-height: 40px;
-  font-family: "Sacramento", Arial, serif;
+  font-family: "la-bohemienne", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 .fh5co-nav a {
   padding: 5px 10px;
@@ -844,7 +846,9 @@ form label {
   margin-bottom: 0px;
   font-size: 100px;
   line-height: 1.5;
-  font-family: "Sacramento", Arial, serif;
+  font-family: "la-bohemienne", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .display-tc h1,
@@ -1065,7 +1069,9 @@ form label {
   }
 }
 .couple-half h3 {
-  font-family: "Sacramento", Arial, serif;
+  font-family: "la-bohemienne", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   color: #F14E95;
   font-size: 30px;
 }
@@ -1182,7 +1188,9 @@ form label {
   line-height: 1.5;
   font-weight: bold;
   color: #F14E95;
-  font-family: "Sacramento", Arial, serif;
+  font-family: "la-bohemienne", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 @media screen and (max-width: 768px) {
   .fh5co-heading h2 {
