--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,9 @@
 *
 * ======================================================= */
 body {
-  font-family: "Work Sans", Arial, sans-serif;
+  font-family: "Cormorant", serif;
   font-weight: 400;
+  font-style: normal;   
   font-size: 16px;
   line-height: 1.7;
   color: #828282;
@@ -64,8 +65,9 @@ p {
 
 h1, h2, h3, h4, h5, h6, figure {
   color: #000;
-  font-family: "Work Sans", Arial, sans-serif;
+  font-family: "Cormorant", serif;
   font-weight: 400;
+  font-style: normal;
   margin: 0 0 20px 0;
 }
 
@@ -99,12 +101,11 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 .fh5co-nav #fh5co-logo {
-  font-size: 40px;
+  font-size: 20px;
   margin: 0;
   padding: 0;
   line-height: 40px;
-  font-family: "la-bohemienne", sans-serif;
-  font-weight: 400;
+  font-family: 'Amalfi Coast', sans-serif;
   font-style: normal;
 }
 .fh5co-nav a {
@@ -844,10 +845,9 @@ form label {
 #fh5co-counter .display-tc h1,
 .fh5co-cover .display-tc h1 {
   margin-bottom: 0px;
-  font-size: 100px;
+  font-size: 60px;
   line-height: 1.5;
-  font-family: "la-bohemienne", sans-serif;
-  font-weight: 400;
+  font-family: 'Amalfi Coast', sans-serif;
   font-style: normal;
 }
 @media screen and (max-width: 768px) {
@@ -1069,8 +1069,8 @@ form label {
   }
 }
 .couple-half h3 {
-  font-family: "la-bohemienne", sans-serif;
-  font-weight: 400;
+  font-family: 'Amalfi Coast', sans-serif;
+  font-size: 20px;
   font-style: normal;
   color: #F14E95;
   font-size: 30px;
@@ -1183,18 +1183,17 @@ form label {
   margin-bottom: 2em;
 }
 .fh5co-heading h2 {
-  font-size: 60px;
+  font-size: 40px;
   margin-bottom: 10px;
   line-height: 1.5;
   font-weight: bold;
   color: #F14E95;
-  font-family: "la-bohemienne", sans-serif;
-  font-weight: 400;
+  font-family: 'Amalfi Coast', sans-serif;
   font-style: normal;
 }
 @media screen and (max-width: 768px) {
   .fh5co-heading h2 {
-    font-size: 40px;
+    font-size: 20px;
   }
 }
 .fh5co-heading p {
@@ -1655,9 +1654,10 @@ form label {
 .btn {
   margin-right: 4px;
   margin-bottom: 4px;
-  font-family: "Work Sans", Arial, sans-serif;
-  font-size: 16px;
+  font-family: "Cormorant", serif;
   font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   -ms-border-radius: 30px;
